scores table added, quiz score synced

--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -42,7 +42,16 @@
               <% end %>
               <% if student.email %>
               <li><%= student.email %></li>
-              <% end %>              
+              <% end %>
+
+
+              <% if student.scores %>
+                <% student.scores.each do |score| %>
+                  <li>Score <%= score.correct %></li>
+                <% end %>       
+              <% end %>       
+            
+
             </ul>
           </div>
         </div>
