--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <% if user_signed_in? %>
   <script> 
-    var user = <%= current_user.to_json(only: [:first_name, :id]).html_safe %>;
+    var current_user = <%= current_user.to_json(only: [:first_name, :id]).html_safe %>;
   </script>
   <% end %> 
   <script type="text/javascript" src="//use.typekit.net/pmb1dkw.js"></script>
