admin can view quiz scores

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -84,6 +84,15 @@ a.link:hover {
 	border-bottom: 3px solid #a33873;
 }
 
+a.school-link {
+	color: #fff;
+}
+
+a.school-link:hover {
+	color: #ccc;
+	text-decoration: none;
+}
+
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
 	font-size: 10px;
 	height: 35px;
