--- a/app/views/positions/editorial/_tone.html.erb
+++ b/app/views/positions/editorial/_tone.html.erb
@@ -1,29 +1,44 @@
 
 <p>Be real. Be honest. Channel <a href="https://twitter.com/lenadunham/status/399693669021646848">Lena Dunham</a>, not <a href="https://twitter.com/MarthaStewart/status/402162350456729600">Martha Stewart</a>.</p>
-<p>Spoon has a real college editorial voice (which you should be able to master, considering the fact that you’re a real college student). You’re not writing for Bon Appetit, you’re writing for your friends. If you wouldn’t write something in an email to your friends, don’t write it on Spoon.</p>
-<p>Look to <a href="http://thrillist.com">Thrillist</a> for voice inspiration. They kill it in the content strategy department. Check out these headlines:</p>
-<ul>
-  <li>
-    <strong>Mountain Dew Cheetos are here, but they’re only in Japan, obviously.</strong> Japan has given us Mountain Dew Cheetos, and they are reportedly just as weird as you’d think.
-  </li>
-  <li>
-    <strong>11 reasons why breakfast tacos are better than bagels.</strong>We prove beyond a reasonable doubt that breakfast tacos are the most superior breakfast food.
-  </li>
-  <li>
-    <strong>Everything you never wanted to know about prison food.</strong> It turns out prison food is just as gross as you expected, but there’s plenty more interesting backstory about jail cuisine that...
-  </li>
-</ul>
+<p>Spoon has a real college editorial voice (which you should be able to master, considering the fact that you’re a real college student). You’re not writing for Bon Appetit, you’re writing for your friends. If you wouldn’t write something in an email to your friends, don’t write it for Spoon.</p>
 <ul class="list-unstyled">
   <li>
-    Be <strong>raw</strong> but not <strong>cheesy</strong>
+    <h3>Be <strong>raw</strong> but not <strong>cheesy</strong></h3>
   </li>
   <li>
-    Be <strong>friendly</strong> but not <strong>ditzy</strong>
+    <h3>Be <strong>friendly</strong> but not <strong>ditzy</strong></h3>
   </li>
   <li>
-    Be <strong>smart</strong> but not <strong>serious</strong>
+     <h3>Be <strong>smart</strong> but not <strong>serious</strong></h3>
   </li>
   <li>
-    Be <strong>cool</strong> but not <strong>cocky</strong>
+     <h3>Be <strong>cool</strong> but not <strong>cocky</strong></h3>
   </li>
 </ul>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+
+<p>Look to <a href="http://thrillist.com">Thrillist</a> for voice inspiration. They kill it in the content strategy department. Check out these headlines:</p>
+<ul class="row">
+  <div class="col-sm-4">
+    <div class="img-frame">
+    <img src="/assets/thrillist-3.jpg">
+  </div>
+    <strong>Mountain Dew Cheetos are here, but they’re only in Japan, obviously.</strong><br>Japan has given us Mountain Dew Cheetos, and they are reportedly just as weird as you’d think.
+  </div>
+  <div class="col-sm-4">
+    <div class="img-frame">
+    <img src="/assets/thrillist-2.jpg">
+  </div>
+    <strong>11 reasons why breakfast tacos are better than bagels.</strong><br>We prove beyond a reasonable doubt that breakfast tacos are the most superior breakfast food.
+  </div>
+  <div class="col-sm-4">
+    <div class="img-frame">
+    <img src="/assets/thrillist-1.jpg">
+  </div>
+    <strong>Everything you never wanted to know about prison food.</strong><br>It turns out prison food is just as gross as you expected, but there’s plenty more interesting backstory about jail cuisine that...
+  </div>
+</ul>
+</div>
+</div>
+
