--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,28 @@
+<% color_1 = current_user.school.color_1 %>
+<% color_2 = current_user.school.color_2 %>
 
+
+<style>
+	a.btn.btn-primary.begin-track {
+		color: <%= color_2 %>;
+	}
+	a.btn.btn-primary.begin-track:hover, div.circle {
+		background-color: <%= color_1 %>;
+	}
+	a.link:hover {
+		border-color: <%= color_1 %>;
+	}
+
+</style>
 <!--  SEE YOUR RESPONSIBILITIES *******************************************************      -->
 <div class="row">
-	<div class="col-md-8 col-md-offset-2 profile">
+	<div class="col-md-12">
 		<h1>So, <%= current_user.first_name %>... you're the <%= current_user.position.name %> at <a class="link" href="schools/<%= current_user.school.shortname %>"><%= current_user.school.name %></a>.</h1>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6 profile">
+		
 
 	<p class="small-caps">It's your job to:</p>
 
@@ -65,6 +85,22 @@
 		<h4>... who do you think you are?</h4>
 
 	<% end %>
+	<div class="row">
+<div class="col-sm-6 ">
+<div class="circle">
+<div class="number">1</div>
+</div>
+<p class="center">Watch the videos on your track (designed specifically for your role!). All of the videos are only about <strong>one minute!</strong></p>
+</div>
+<div class="col-sm-6">
+<div class="circle">
+<div class="number">2</div>
+</div>
+<p class="center">Open up another browser window on your screen and <strong>do the activities as you go along</strong>, if it says so. Trust us.</p>
+</div>
+</div>
+</div>
+<div class="col-md-6">
 
 	<!--  SEE YOUR PROGRESS *******************************************************      -->
 	<h3>You are <%= current_user.percent_complete %>% through your track.</h3>
@@ -74,24 +110,11 @@
 	<!--  BEGINYOUR TRACK *******************************************************      -->
 	
 
-		<a class="btn btn-primary btn-lg begin-track <%= current_user.position.track(@page) %>" href="<%= current_user.position.track(@page) %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.status.pages.last) %><%= current_user.position.next_page(current_user.status.pages.last).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">My Track</a>
+		<a class="btn btn-primary btn-lg begin-track" href="<%= current_user.position.track(@page) %>/<%= current_user.position.shortname %>/<% if current_user.position.next_page(current_user.status.pages.last) %><%= current_user.position.next_page(current_user.status.pages.last).shortname %><% else %><%= current_user.position.pages.first.shortname %><% end %>">My Track</a>
 	
 	<!--  INSTRUCTIONS *******************************************************      -->
 
-<div class="row <%= current_user.position.track(@page) %>">
-<div class="col-sm-6 ">
-<div class="circle">
-<div class="number">1</div>
-</div>
-<p class="center">Watch the videos on your track (designed specifically for your role!). None of the videos are longer than <strong>one minute!</strong></p>
-</div>
-<div class="col-sm-6">
-<div class="circle">
-<div class="number">2</div>
-</div>
-<p class="center">Open up another browser window on your screen and <strong>do the activities as you go along</strong>, if it says so. Trust us.</p>
-</div>
-</div>
+
 
 </div>
 </div>
