--- a/app/views/positions/editorial/_editorial_process.html.erb
+++ b/app/views/positions/editorial/_editorial_process.html.erb
@@ -3,36 +3,43 @@
 Scroll to the right to learn how a story flows through the system, from ideation to publishing
 
 
-
+<div class="timeline-wrapper clearfix">
+	<div class="timeline-step" id="step-1">
 STEP 1
 
 A writer comes up with an amazing story idea and emails the assigned editor for approval.
-
+	</div>
+	<div class="timeline-step" id="step-2">
 STEP 2
 
 Editor approves (or disapproves) idea, and writer immediately contacts their photographer to coordinate photos for the article.
-
+	</div>
+	<div class="timeline-step" id="step-2">
 STEP 3
 
 Writer researches and writes the story and posts the story to WordPress. At the same time, the photographer uploads the photos to Flickr.
-
+	</div>
+	<div class="timeline-step" id="step-2">
 STEP 4
 
 The writer takes the photos they want from Flickr and inserts them into their article. Sets featured image.
-
+	</div>
+	<div class="timeline-step" id="step-2">
 STEP 5
 
 The writer notifies the copyeditor that the story is ready to go, and the copyeditor edits for grammar, obvious mistakes and things that just don’t make sense.
-
+	</div>
+	<div class="timeline-step" id="step-2">
 STEP 6
 
 The story moves on to the managing editor or editor-in-chief. They confirm that the story will be a hit, make necessary edits, and refines the title and subtitle to be killer. If the story has major issues, it’s sent back to writer.
-
+	</div>
+	<div class="timeline-step" id="step-2">
 STEP 7
 
 When the story looks good, the EIC publishes to the site and the writer promotes it on social media.
-
-
+	</div>
+</div>
 
 
 *Throughout this process, the publishing spreadsheet will be updated.
