--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -34,7 +34,7 @@
               </button>
             </p>
           </div>
-          <div class="panel-body">
+          <div class="panel-body" id="student_<%= student.id %>">
             <ul class="list-unstyled">
               <li><%= student.position.name %></li>
              
@@ -45,16 +45,12 @@
               <li><%= student.email %></li>
               <% end %>
               <% if current_user.is_admin? %>
-              <li><%= student.percent_complete %>% completed</li>
-              <% if student.scores %>
-                <% student.scores.each do |score| %>
-                  <li>Quiz <%= score.page.name %> Score <%= score.correct %> / <%= score.total %></li>
-                <% end %>       
-              <% end %>  
+                <% if student.scores %>
+                  <% student.scores.each do |score| %>
+                    <li><%= score.page.name %> Quiz: <%= score.correct %> / <%= score.total %></li>
+                  <% end %>       
+                <% end %>  
               <% end %>
-                   
-            
-
             </ul>
           </div>
         </div>
@@ -135,10 +131,15 @@
 
   $(function() {
       setHandlers();
+ 
+
+  <% if school.users_active != [] %>
+    <% school.users_active.each do |student| %>
+      donutOfCompleteness(<%= student.id %>, <%= student.percent_complete %>, "<%= student.position.track(student.position.pages.first) %>")
+    <% end %>  
+  <% end %>
+  
   });
-
-
-
 
 </script>
 
