--- a/app/views/positions/editorial/_update_staff.html.erb
+++ b/app/views/positions/editorial/_update_staff.html.erb
@@ -1,6 +1,8 @@
 
 <p>You need to be sure to keep your Staff page updated — everyone deserves credit for the work they do!</p>
-<p>TRY IT NOW:</p>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2"
+<p class="small-caps">TRY IT NOW:</p>
 
 <ol> 
   <li>
@@ -10,7 +12,7 @@
     Click “About.”
   </li>
   <li>
-    “YourSchoolName’s Staff” should be the first line, formatted to Heading 3.
+    “<%= current_user.school.name %> Staff” should be the first line, formatted to Heading 3.
   </li>
   <li>
     List staff members below, starting with the editor-in-chief and business director.
@@ -19,3 +21,5 @@
     Click “Update” to save changes.
   </li>
 </ol>
+</div>
+</div>
