--- a/app/views/positions/editorial/_post.html.erb
+++ b/app/views/positions/editorial/_post.html.erb
@@ -1,34 +1,33 @@
 
 
 <div class="row">
-  <div class="col-sm-6">
-    <iframe src="//player.vimeo.com/video/79539371" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-
-  <div class="col-sm-6">
-    <ol>
-      <li>
-        First, know what <strong>type</strong> of post it is.
-        <ul>
+  <div class="col-md-10 col-md-offset-1">
+      
+        <div class="box">
+          <p class="small-caps"> First, know what type of post it is.</p>
+        <ul class="list-unstyled">
+          <% if @position.shortname != "national-contributor" %>
           <li>
             For students, campus or events, go to Posts > Add new
           </li>
           <li>
-            For Restaurant posts, go to Restaurant > Add new
+            For restaurant posts, go to Restaurant > Add new
+          </li>
+          <% end %>
+          <li>
+            For recipes, go to Recipe > Add new
           </li>
           <li>
-            For Recipes, go to Recipe > Add new
+            For kitchen 101 is Kitchen 101 > Add New
           </li>
           <li>
-            For Kitchen 101 is Kitchen 101 > Add New
-          </li>
-          <li>
-            For Food for Thought, go to Food for Thought > Add New
+            For food for thought, go to Food for Thought > Add New
           </li>
         </ul>
-      </li>
+      </div>
+      <ol>
       <li>
-        Enter title and the body of the article (with proper <strong><a href="">formatting</a></strong>). Make sure you’re using the visual tab, and for more on the toolbar, check out <a href="http://spoonuniversity.com/images/screenshot-edit-explained.png">this</a> graphic! 
+        Enter title and the body of the article. Make sure you’re using the visual tab, and for more on the toolbar, check out <a href="http://spoonuniversity.com/images/screenshot-edit-explained.png">this</a> graphic! 
       </li>
       <li>
         NEW! Add a 100 character dek (or subtitle) to your article to give it context and encourage readers to click. The dek box is located below the title.
@@ -37,9 +36,6 @@
         Select the main <strong>category</strong> (e.g. Recipes) and all appropriate subcategories (e.g. 20 Minutes or Less).
       </li>
       <li>
-        Check the box to “<strong>Allow Comments.</strong>”
-      </li>
-      </li>
         Enter the <strong>SEO</strong> Title and description (this sets what comes up in Google Searches and on Facebook). 
       </li>
       <li>
@@ -47,8 +43,16 @@
       </li>
     </ol>
 
+    </div>    
+  </div>
+  
+
+  <div class="col-sm-5">
     <p>PUT IT INTO PRACTICE:</p>
     <p>Click around your WordPress Dashboard and create a post. Familiarize yourself with the toolbar and other options.</p>
+  </div>
+  <div class="col-sm-7">
+    <iframe src="//player.vimeo.com/video/79539371" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 </div>
 
