--- a/app/views/positions/editorial/_profile.html.erb
+++ b/app/views/positions/editorial/_profile.html.erb
@@ -2,12 +2,8 @@
 <p>Before you publish anything onto WordPress, make sure your user profile is up to snuff so readers can see your bio and pretty face at the bottom of each post.</p>
 
 <div class="row">
-  <div class="col-sm-6">
-    <iframe src="//player.vimeo.com/video/74738920" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-
-  <div class="col-sm-6">
-    <p>PUT IT INTO PRACTICE:</p>
+  <div class="col-sm-5">
+    <p class="small-caps">PUT IT INTO PRACTICE:</p>
     <ol>
       <li>
         From the dashboard, go to Profile > Your Profile.
@@ -28,6 +24,9 @@
         Feel free to add whatever additional contact info you want.
       </li>
     </ol>
+  </div>
+  <div class="col-sm-7">
+    <iframe src="//player.vimeo.com/video/74738920" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 </div>
 
