--- a/app/views/positions/editorial/_add_video.html.erb
+++ b/app/views/positions/editorial/_add_video.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="col-sm-6">
-    <p>PUT IT INTO PRACTICE:</p>
+    <p class="small-caps">PUT IT INTO PRACTICE:</p>
     <ol>
       <li>
         Create your post
