--- a/app/views/positions/editorial/_add_photos.html.erb
+++ b/app/views/positions/editorial/_add_photos.html.erb
@@ -34,6 +34,8 @@
     </ol>
   </div>
 </div>
+<div class="empty-space"></div>
+<h3>Or you can upload photos from your desktop.</h3>
 <div class="row">
 
 <div class="col-sm-6">
