--- a/app/views/positions/editorial/_post.html.erb
+++ b/app/views/positions/editorial/_post.html.erb
@@ -1,33 +1,19 @@
-
-
 <div class="row">
-  <div class="col-md-10 col-md-offset-1">
-      
-        <div class="box">
-          <p class="small-caps"> First, know what type of post it is.</p>
-        <ul class="list-unstyled">
-          <% if @position.shortname != "national-contributor" %>
-          <li>
-            For students, campus or events, go to Posts > Add new
-          </li>
-          <li>
-            For restaurant posts, go to Restaurant > Add new
-          </li>
-          <% end %>
-          <li>
-            For recipes, go to Recipe > Add new
-          </li>
-          <li>
-            For kitchen 101 is Kitchen 101 > Add New
-          </li>
-          <li>
-            For food for thought, go to Food for Thought > Add New
-          </li>
-        </ul>
-      </div>
-      <ol>
+  <div class="col-md-8 col-md-offset-2">
+
+<p>This is the whole shabang, you know? Be sure to pay attention to these steps carefully, because we use <strong>multiple post types</strong> to differentiate between our content.</p>
+  </div>
+</div>
+<div class="row">
+ <div class="col-sm-8">
+    <iframe src="//player.vimeo.com/video/79539371" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+  <div class="col-sm-4">
+    <p class="small-caps">PUT IT INTO PRACTICE:</p>
+    <p>Click around your WordPress Dashboard and create a test post to follow along. Don't save it, though, or you'll clutter stuff up.</p>
+    <ol>
       <li>
-        Enter title and the body of the article. Make sure you’re using the visual tab, and for more on the toolbar, check out <a href="http://spoonuniversity.com/images/screenshot-edit-explained.png">this</a> graphic! 
+        Enter title and the body of the article. Make sure you’re using the visual tab, and for more on the toolbar, check out <a target="_blank" href="http://spoonuniversity.com/images/screenshot-edit-explained.png">this</a> graphic! 
       </li>
       <li>
         NEW! Add a 100 character dek (or subtitle) to your article to give it context and encourage readers to click. The dek box is located below the title.
@@ -42,35 +28,46 @@
         You can “<strong>Preview</strong>” your post, then select “Save as Draft” or “Submit for Review.” 
       </li>
     </ol>
+  </div> 
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="row">
+      <div class="col-md-6">
+      
+        <div class="box">
+          <p class="small-caps"> First, know what type of post it is.</p>
+        <ul class="list-unstyled">
+          <% if @position.shortname != "national-contributor" %>
+          <li>
+            For students, campus or events, go to <strong>Posts</strong> > Add new
+          </li>
+          <li>
+            For restaurant posts, go to <strong>Restaurant</strong> > Add new
+          </li>
+          <% end %>
+          <li>
+            For recipes, go to <strong>Recipe</strong> > Add new
+          </li>
+          <li>
+            For kitchen 101 is <strong>Kitchen 101</strong> > Add New
+          </li>
+          <li>
+            For food for thought, go to <strong>Food for Thought</strong> > Add New
+          </li>
+        </ul>
+      </div>
+          </div>
+
+       <div class="col-md-6">
+    <img src="/assets/post-types.png">
+  </div>
+  </div>
+    </div>
+    <div class="col-md-4">
+      
+    
 
     </div>    
   </div>
-  
-
-  <div class="col-sm-5">
-    <p>PUT IT INTO PRACTICE:</p>
-    <p>Click around your WordPress Dashboard and create a post. Familiarize yourself with the toolbar and other options.</p>
-  </div>
-  <div class="col-sm-7">
-    <iframe src="//player.vimeo.com/video/79539371" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- VIDEO HERE
-http://secretsauce.spoonuniversity.com/create-post/ -->
