--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -26,9 +26,6 @@ html body {
 	border-radius: 5px;
 }
 
-svg#completion {
-	height:50px;
-}
 
 .little-spoon {
 	width:14px;
@@ -478,4 +475,50 @@ path {
     stroke: #ffffff;
     stroke-width: 4px;
 }
+
+div.quiz-score{
+	border-style: solid;
+	border-width: 3px;
+	border-radius: 10px;
+	display: inline-block;
+	font-size: 3em;
+}
+
+.quiz-score{
+	padding: .5em;
+}
+
+.editorial {
+	border-color: #f1a003;
+	color: #f1a003;
+}
+
+.photo {
+	border-color: #00a2ca;
+	color: #00a2ca;
+
+}
+
+.marketing{
+	border-color: #829300;
+	color: #829300;
+}
+
+.retake{
+	display: inline-block;
+	color:white;
+	border-radius: 3px;
+	padding: 4px 20px;
+	margin: 10px;
+}
+
+
+
+
+
+
+
+
+
+
 
