--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -430,7 +430,47 @@ div#menu {
 	background-color:#a33873;
 }
 
+path {
+    stroke: #ffffff;
+    stroke-width: 4px;
+}
 
+div.quiz-score{
+	border-style: solid;
+	border-width: 3px;
+	border-radius: 10px;
+	display: inline-block;
+	font-size: 3em;
+}
+
+.quiz-score {
+	padding: .5em;
+}
+
+.editorial {
+	border-color: #f1a003;
+	color: #f1a003;
+}
+
+.photo {
+	border-color: #00a2ca;
+	color: #00a2ca;
+
+}
+
+.marketing{
+	border-color: #829300;
+	color: #829300;
+}
+
+a.retake{
+	display: inline-block;
+	text-decoration:none;
+	color:white;
+	border-radius: 5px;
+	padding: 4px 20px;
+	margin: 10px;
+}
 
 
 
@@ -471,46 +511,6 @@ div#menu {
 	
  }
 
-path {
-    stroke: #ffffff;
-    stroke-width: 4px;
-}
-
-div.quiz-score{
-	border-style: solid;
-	border-width: 3px;
-	border-radius: 10px;
-	display: inline-block;
-	font-size: 3em;
-}
-
-.quiz-score{
-	padding: .5em;
-}
-
-.editorial {
-	border-color: #f1a003;
-	color: #f1a003;
-}
-
-.photo {
-	border-color: #00a2ca;
-	color: #00a2ca;
-
-}
-
-.marketing{
-	border-color: #829300;
-	color: #829300;
-}
-
-.retake{
-	display: inline-block;
-	color:white;
-	border-radius: 3px;
-	padding: 4px 20px;
-	margin: 10px;
-}
 
 
 
