--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -104,22 +104,17 @@
 
 	<!--  SEE YOUR PROGRESS *******************************************************      -->
 
- 
 
-
-
-
-	<div id="personal_<%= current_user.id %>"></div>
-
-	<h3>You are <%= current_user.percent_complete %>% through your track.</h3>
-
+	<h4>You are <%= current_user.percent_complete %>% through your track.</h4>
+  <div id="personal_<%= current_user.id %>"></div>
+  
 	<% if current_user.scores %>
 		<% track = current_user.position.track(current_user.position.pages.first) %>
 		<div class="quiz-wrapper">
 	    <% current_user.scores.each do |score| %>
 				<% if current_user.position.pages.include?(score.page) %>
 		      <div class="<%= track %>">
-		      	<h4><strong><%= score.page.name %></strong></h4>
+		      	<h4 class="quiz-title"><strong><%= score.page.name %></strong></h4>
 		      	<div class="quiz-score"><%= score.percent_correct %>%</div><br>
 		      	<a class="retake" href="/<%= track %>/<%= current_user.position.shortname %>/<%= score.page.shortname %>">RETAKE</a>
 		      </div>
