--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
   <% end %>
 </div>
 </nav>
-<div class="container body">
+<div class="container">
+  <div class="body">
   <% if notice %>
   <p class="alert alert-notice"><%= notice %></p>
 <% end %>
@@ -35,6 +36,7 @@
 <div class="row">
   <%= yield %>
 
+</div>
 </div>
 </div>
   <footer>
