--- a/app/views/positions/editorial/_contributor_spreadsheet.html.erb
+++ b/app/views/positions/editorial/_contributor_spreadsheet.html.erb
@@ -1,1 +1,2 @@
-_contributor_spreadsheet.html.erb
+<p>You can access the spreadsheet in Google Drive <a target="_blank" href="https://docs.google.com/a/spoonuniversity.com/spreadsheet/ccc?key=0Au6DS9B6X4_RdENqN2lWNGNLbzJ6MzNpUHd3OEtDWmc#gid=1">here</a>.
+The publishing spreadsheet will be used to keep track of the status of every article. It’s color-coded so you can see at a glance which articles have been published and which need to move forward more quickly. It’s a bit confusing, so ask questions if you need, but make sure all writers and editors are on board. We PROMISE your lives will be more organized with this baby.</p>
