--- a/app/views/positions/editorial/_editorial_sections.html.erb
+++ b/app/views/positions/editorial/_editorial_sections.html.erb
@@ -9,7 +9,7 @@
 				<div class="box-inner">
 					<p>Keep it simple, take plenty of photos, and follow the formatting rules to a T.</p>
 					<p>
-						<a class="btn btn-primary" href="http://secretsauce.spoonuniversity.com/recipe-formatting/" target="_blank">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/recipes" target="_blank">SEE MORE</a>
 					</p>
 				</div>
 			</div>
@@ -20,7 +20,7 @@
 				<div class="box-inner">
 					<p>Get creative. Pose questions. Answer questions. Make lists, conduct interviews and address health concerns.</p>
 					<p>
-						<a class="btn btn-primary" href="http://secretsauce.spoonuniversity.com/fft-formatting/" target="_blank">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/food_for_thought" target="_blank">SEE MORE</a>
 					</p>
 				</div>
 			</div>
@@ -31,7 +31,7 @@
 				<div class="box-inner">
 					<p>Make common kitchen tasks easy. Help students learn about the basics in a clear, easy-to-read format.</p>
 					<p>
-						<a class="btn btn-primary" href="http://secretsauce.spoonuniversity.com/kitchen-101-formatting/" target="_blank">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/kitchen_101" target="_blank">SEE MORE</a>
 					</p>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 				<div class="box-inner">
 					<p>Write like you’re telling a friend about a restaurant. Love it, hate it, would you go back?</p>
 					<p>
-						<a class="btn btn-primary" href="http://secretsauce.spoonuniversity.com/restaurant-formatting/" target="_blank">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/restaurants" target="_blank">SEE MORE</a>
 					</p>
 				</div>
 			</div>
@@ -56,7 +56,7 @@
 				<div class="box-inner">
 					<p>Everything from dining halls, happenings to local celebs (they’re famous when you make them so).</p>
 					<p>
-						<a class="btn btn-primary" href="http://secretsauce.spoonuniversity.com/campus-students-formatting/">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/campus_students">SEE MORE</a>
 					</p>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 				<div class="box-inner">
 					<p>Support other student organizations and local restaurants. Preview and recap relevant food events.</p>
 					<p>
-						<a class="btn btn-primary" href="http://secretsauce.spoonuniversity.com/events-formatting/" target="_blank">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/events" target="_blank">SEE MORE</a>
 					</p>
 				</div>
 			</div>
